Refactored findAvailableFiles method in FileFinder class.